# ChangeLog for app-crypt/md5deep
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.56 2011/04/26 16:32:26 nyhm Exp $

*md5deep-3.9 (26 Apr 2011)

  26 Apr 2011; Tristan Heaven <nyhm@gentoo.org> +md5deep-3.9.ebuild:
  Version bump, bug #364765 by Tim Harder

*md5deep-3.7 (13 Feb 2011)

  13 Feb 2011; Christian Faulhammer <fauli@gentoo.org> +md5deep-3.7.ebuild:
  version bump for bug 351511 by Jesse Adelman <jesse AT boldandbusted DOT
  com>

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> md5deep-3.4.ebuild:
  Transfer Prefix keywords

  09 Dec 2009; nixnut <nixnut@gentoo.org> md5deep-3.4.ebuild:
  ppc stable #293994

  25 Nov 2009; Tiago Cunha <tcunha@gentoo.org> md5deep-3.4.ebuild:
  stable sparc, bug 293994

  23 Nov 2009; Markus Meier <maekke@gentoo.org> md5deep-3.4.ebuild:
  amd64/x86 stable, bug #293994

*md5deep-3.4 (10 Jun 2009)

  10 Jun 2009; Tristan Heaven <nyhm@gentoo.org> +md5deep-3.4.ebuild:
  Version bump

  30 May 2009; nixnut <nixnut@gentoo.org> md5deep-3.3.ebuild:
  ppc stable #271301

  27 May 2009; Richard Freeman <rich0@gentoo.org> md5deep-3.3.ebuild:
  amd64 stable - 271301

  27 May 2009; Ferris McCormick <fmccor@gentoo.org> md5deep-3.3.ebuild:
  Sparc stable, Bug #271301.

  27 May 2009; Christian Faulhammer <fauli@gentoo.org> md5deep-3.3.ebuild:
  stable x86, bug 271301

*md5deep-3.3 (04 Apr 2009)

  04 Apr 2009; Tristan Heaven <nyhm@gentoo.org> +md5deep-3.3.ebuild:
  Version bump

*md5deep-3.2 (25 Jan 2009)

  25 Jan 2009; Tristan Heaven <nyhm@gentoo.org>
  +files/md5deep-3.2-as-needed.patch, +md5deep-3.2.ebuild:
  Version bump

  10 Dec 2008; Tristan Heaven <nyhm@gentoo.org>
  files/md5deep-3.1-as-needed.patch:
  Fix linking with --as-needed, bug #246865

*md5deep-3.1 (07 Dec 2008)

  07 Dec 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/md5deep-3.1-as-needed.patch, +md5deep-3.1.ebuild:
  Version bump

*md5deep-3.0 (11 May 2008)
