@@ -1,0 +1,14 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/Attic/md5deep-3.9.1.ebuild,v 1.1 2011/06/08 18:33:59 nyhm Exp $
+
+EAPI=4
+
+DESCRIPTION="Expanded md5sum program with recursive and comparison options"
+HOMEPAGE="http://md5deep.sourceforge.net/"
+SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
+
+LICENSE="public-domain GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos"
+IUSE=""
