@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/md5deep
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.56 2011/04/26 16:32:26 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.57 2011/06/08 18:33:59 nyhm Exp $
+
+*md5deep-3.9.1 (08 Jun 2011)
+
+  08 Jun 2011; Tristan Heaven <nyhm@gentoo.org> +md5deep-3.9.1.ebuild:
+  Version bump
 
 *md5deep-3.9 (26 Apr 2011)
 
